# Remote-VPS-Performance-Monitoring

./: .gitignore  README.md
agent/: config.example.yaml  go.mod
agent/cmd/vps-agent/: main.go
agent/install/: install.sh  sudoers.example  vps-monitor-agent.service
agent/internal/api/: server.go
agent/internal/config/: config.go
agent/internal/system/: files.go  firewall.go  integrations.go  metrics.go  runner.go  systemd.go
client/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  api.ts  styles.css  types.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
