[package]
name = "remote-vps-monitor-client"
version = "0.1.0"
description = "Remote VPS monitoring desktop client"
authors = ["Remote VPS Monitor"]
edition = "2021"

[lib]
name = "remote_vps_monitor_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
